<resources>
    <string name="app_name">Calculator</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="BtnStr_0">0</string>
    <string name="BtnStr_1">1</string>
    <string name="BtnStr_2">2</string>
    <string name="BtnStr_3">3</string>
    <string name="BtnStr_4">4</string>
    <string name="BtnStr_5">5</string>
    <string name="BtnStr_6">6</string>
    <string name="BtnStr_7">7</string>
    <string name="BtnStr_8">8</string>
    <string name="BtnStr_9">9</string>

    <string name="BtnStr_del">DEL</string>
    <string name="BtnStr_ac">AC</string>
    <string name="BtnStr_mul">×</string>
    <string name="BtnStr_div">÷</string>
    <string name="BtnStr_add">+</string>
    <string name="BtnStr_sub">-</string>
    <string name="BtnStr_decPoint">.</string>
    <string name="BtnStr_intoTen">×10</string>
    <string name="BtnStr_ans">ANS</string>
    <string name="BtnStr_equal">=</string>

    <string name="stdCalc">Standard</string>
    <string name="sciCalc">Scientific</string>
    <string name="proCalc">Programmer</string>
</resources>