<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_std">

    <fragment
        android:id="@+id/nav_std"
        android:name="com.example.calculator.ui.standard.StandardFragment"
        android:label="@string/stdCalc"
        tools:layout="@layout/fragment_standard" />

    <fragment
        android:id="@+id/nav_sci"
        android:name="com.example.calculator.ui.scientific.ScientificFragment"
        android:label="@string/sciCalc"
        tools:layout="@layout/fragment_scientific" />

    <fragment
        android:id="@+id/nav_pro"
        android:name="com.example.calculator.ui.programmer.ProgrammerFragment"
        android:label="@string/proCalc"
        tools:layout="@layout/fragment_programmer" />
</navigation>