<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.standard.StandardFragment">

    <TableLayout
        android:id="@+id/stdKeypadTableLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline">

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1">

            <Button
                android:id="@+id/seven_UIBtn"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:lines="1"
                android:text="@string/BtnStr_7"

                app:autoSizeMaxTextSize="20sp"
                app:autoSizeMinTextSize="10sp"
                app:autoSizeStepGranularity="2sp"
                app:autoSizeTextType="uniform"
                app:cornerRadius="0dp" />

            <Button
                android:id="@+id/eight_UIBtn"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:lines="1"
                android:text="@string/BtnStr_8"

                app:autoSizeMaxTextSize="20sp"
                app:autoSizeMinTextSize="10sp"
                app:autoSizeStepGranularity="2sp"
                app:autoSizeTextType="uniform"
                app:cornerRadius="0dp" />

            <Button
                android:id="@+id/nine_UIBtn"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:lines="1"
                android:text="@string/BtnStr_9"

                app:autoSizeMaxTextSize="20sp"
                app:autoSizeMinTextSize="10sp"
                app:autoSizeStepGranularity="2sp"
                app:autoSizeTextType="uniform"
                app:cornerRadius="0dp" />

            <Button
                android:id="@+id/delete_UIBtn"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:lines="1"
                android:text="@string/BtnStr_del"

                app:autoSizeMaxTextSize="20sp"
                app:autoSizeMinTextSize="10sp"
                app:autoSizeStepGranularity="2sp"
                app:autoSizeTextType="uniform"
                app:cornerRadius="0dp" />

            <Button
                android:id="@+id/AC_UIBtn"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:lines="1"
                android:text="@string/BtnStr_ac"

                app:autoSizeMaxTextSize="20sp"
                app:autoSizeMinTextSize="10sp"
                app:autoSizeStepGranularity="2sp"
                app:autoSizeTextType="uniform"
                app:cornerRadius="0dp" />

        </TableRow>


        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1">

            <Button
                android:id="@+id/four_UIBtn"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:lines="1"
                android:text="@string/BtnStr_4"

                app:autoSizeMaxTextSize="20sp"
                app:autoSizeMinTextSize="10sp"
                app:autoSizeStepGranularity="2sp"
                app:autoSizeTextType="uniform"
                app:cornerRadius="0dp" />

            <Button
                android:id="@+id/five_UIBtn"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:lines="1"
                android:text="@string/BtnStr_5"

                app:autoSizeMaxTextSize="20sp"
                app:autoSizeMinTextSize="10sp"
                app:autoSizeStepGranularity="2sp"
                app:autoSizeTextType="uniform"
                app:cornerRadius="0dp" />

            <Button
                android:id="@+id/six_UIBtn"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:lines="1"
                android:text="@string/BtnStr_6"

                app:autoSizeMaxTextSize="20sp"
                app:autoSizeMinTextSize="10sp"
                app:autoSizeStepGranularity="2sp"
                app:autoSizeTextType="uniform"
                app:cornerRadius="0dp" />

            <Button
                android:id="@+id/mul_UIBtn"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:lines="1"
                android:text="@string/BtnStr_mul"

                app:autoSizeMaxTextSize="30sp"
                app:autoSizeMinTextSize="10sp"
                app:autoSizeStepGranularity="2sp"
                app:autoSizeTextType="uniform"
                app:cornerRadius="0dp" />

            <Button
                android:id="@+id/div_UIBtn"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:lines="1"
                android:text="@string/BtnStr_div"

                app:autoSizeMaxTextSize="30sp"
                app:autoSizeMinTextSize="10sp"
                app:autoSizeStepGranularity="2sp"
                app:autoSizeTextType="uniform"
                app:cornerRadius="0dp" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1">

            <Button
                android:id="@+id/one_UIBtn"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:lines="1"
                android:text="@string/BtnStr_1"

                app:autoSizeMaxTextSize="20sp"
                app:autoSizeMinTextSize="10sp"
                app:autoSizeStepGranularity="2sp"
                app:autoSizeTextType="uniform"
                app:cornerRadius="0dp" />

            <Button
                android:id="@+id/two_UIBtn"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:lines="1"
                android:text="@string/BtnStr_2"

                app:autoSizeMaxTextSize="20sp"
                app:autoSizeMinTextSize="10sp"
                app:autoSizeStepGranularity="2sp"
                app:autoSizeTextType="uniform"
                app:cornerRadius="0dp" />

            <Button
                android:id="@+id/three_UIBtn"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:lines="1"
                android:text="@string/BtnStr_3"

                app:autoSizeMaxTextSize="20sp"
                app:autoSizeMinTextSize="10sp"
                app:autoSizeStepGranularity="2sp"
                app:autoSizeTextType="uniform"
                app:cornerRadius="0dp" />

            <Button
                android:id="@+id/add_UIBtn"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:lines="1"
                android:text="@string/BtnStr_add"

                app:autoSizeMaxTextSize="30sp"
                app:autoSizeMinTextSize="10sp"
                app:autoSizeStepGranularity="2sp"
                app:autoSizeTextType="uniform"
                app:cornerRadius="0dp" />

            <Button
                android:id="@+id/sub_UIBtn"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:lines="1"
                android:text="@string/BtnStr_sub"

                app:autoSizeMaxTextSize="30sp"
                app:autoSizeMinTextSize="10sp"
                app:autoSizeStepGranularity="2sp"
                app:autoSizeTextType="uniform"
                app:cornerRadius="0dp" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1">

            <Button
                android:id="@+id/zero_UIBtn"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:lines="1"
                android:text="@string/BtnStr_0"

                app:autoSizeMaxTextSize="20sp"
                app:autoSizeMinTextSize="10sp"
                app:autoSizeStepGranularity="2sp"
                app:autoSizeTextType="uniform"
                app:cornerRadius="0dp" />

            <Button
                android:id="@+id/decPoint_UIBtn"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:lines="1"
                android:text="@string/BtnStr_decPoint"

                app:autoSizeMaxTextSize="20sp"
                app:autoSizeMinTextSize="10sp"
                app:autoSizeStepGranularity="2sp"
                app:autoSizeTextType="uniform"
                app:cornerRadius="0dp" />

            <Button
                android:id="@+id/intoTen_UIBtn"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:lines="1"
                android:text="@string/BtnStr_intoTen"

                app:autoSizeMaxTextSize="20sp"
                app:autoSizeMinTextSize="10sp"
                app:autoSizeStepGranularity="2sp"
                app:autoSizeTextType="uniform"
                app:cornerRadius="0dp" />

            <Button
                android:id="@+id/ans_UIBtn"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:lines="1"
                android:text="@string/BtnStr_ans"

                app:autoSizeMaxTextSize="20sp"
                app:autoSizeMinTextSize="10sp"
                app:autoSizeStepGranularity="2sp"
                app:autoSizeTextType="uniform"

                app:cornerRadius="0dp" />

            <Button
                android:id="@+id/equal_UIBtn"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:lines="1"
                android:text="@string/BtnStr_equal"

                app:autoSizeMaxTextSize="30sp"
                app:autoSizeMinTextSize="10sp"
                app:autoSizeStepGranularity="2sp"
                app:autoSizeTextType="uniform"
                app:cornerRadius="0dp" />
        </TableRow>

    </TableLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@+id/stdKeypadTableLayout"
        app:layout_constraintEnd_toEndOf="parent"
        tools:text="Answer" />

    <EditText
        android:id="@+id/editTextMultiLine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginBottom="16dp"
        android:background="@android:color/transparent"
        android:cursorVisible="true"
        android:ems="10"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        android:textSize="40sp"
        app:layout_constraintBottom_toTopOf="@+id/textView3"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@+id/editTextMultiLine"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="History" />

</androidx.constraintlayout.widget.ConstraintLayout>